Do a lot of stuff

--- a/index.html
+++ b/index.html
@@ -1,5 +1,27 @@
-<h1>Welcome!</h1>
-</br>
-Currently I have 0 ideas what to put on this page. Great!
-<script src="sketch-01.js"></script>
-<b> let's see </b>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>The superstatic web-page of Ingmar</title>
+        <link href="styles/style.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    </head>
+    <body>
+        <header id="page-header">
+            <ul class="horizontal-list">
+                <li><h1>Ingmar's website</h1></li>
+                <li>One</li>
+                <li>Two</li>
+                <li>Three</li>
+            </ul>
+        </header>
+        <article>
+            <header>
+                <h2>Welcome to this thing</h2>
+             </header>     
+            <img src="images/sketch.png" alt="Random sketch">     
+        </article>
+        <footer>
+            Made in 2022. It's great.
+        </footer>
+    </body>
+</html>
