--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <header id="page-header">
             <ul class="horizontal-list">
                 <li><h1>Ingmar's website</h1></li>
-                <li>One</li>
+                <li><a href="./cv.html">CV</a></li>
                 <li>Two</li>
                 <li>Three</li>
             </ul>
