Add Education box

--- a/cv.html
+++ b/cv.html
@@ -26,15 +26,40 @@
         </div>
         <div class="education box">
             <h2>Education</h2>
-            <p>In this box there will be tons of information about my education. What I did, where, and for how long.</p>
+            <div class="block primary">
+                <p class="period">2020 - now</p>
+                <h5>Nanobiology, Master of Science</h5>
+                <p class="location">Faculty of Applied Sciences (TU Delft) & Erasmus MC (Erasmus Universiteit Rotterdam)</p>
+                <p>In the Master, the knowledge gathered in the Bachelor is applied and deepened, to gain a deeper understanding about life at the moleculair level. This, by combining Physics, Molecular Biology, Mathematics and (computer-)models.</p>
+            </div>
+            <div class="block primary">
+                <p class="period">2016 - 2020</p>
+                <h5>Nanobiology, Bachelor of Science</h5>
+                <p class="location">Faculty of Applied Sciences (TU Delft) & Erasmus MC (Erasmus Universiteit Rotterdam)</p>
+                <p>The Bachelor lays a foundation in Physics, Molecular Biology and Mathematics, in order to be able to quantify and model the complexity of living systems.</p>
+                <div class="block secondary">
+                    <p class="period">2020</p>
+                    <h5>Bachelor End Project, 7.5</h5>
+                    <p class="location">Delft Bioinformatics Lab</br>
+                        Faculty of Electrical Engineering, Mathematics & Computer Science (TU Delft)
+                    </p>
+                    <p>My Bachelor Thesis was on creating a qualitative and quantitative comparison in performance and quality of existing bioinformatics tools in creating genome graphs. This, by applying these tools in the context of E. Coli genomes.</p>                
+                </div>
+                <div class="block secondary">
+                    <p class="period">2019</p>
+                    <h5>Computer Science Minor, 8</h5>
+                    <p class="location">Faculty of Electrical Engineering, Mathematics & Computer Science (TU Delft)</p>
+                    <p>In this minor, I gained more experience in Python programming and somes general software engineering concepts, which I learned to apply by developing a piece of software in a small team of fellow students.</p>
+                </div>
+            </div>
         </div>
         <div class="experience box">
             <h2>Experience</h2>
-            <p>In this box there will be tons of information about my experience. What I did, where, and for how long.</p>
+            <p>TO DO</p>
         </div>
         <div class="other-experience box">
             <h2>Other Experience</h2>
-            <p>In this box there will be tons of information about my other experiences. What I did, where, and for how long.</p>
+            <p>TO DO</p>
         </div>
     </body>
 </html>
