--- a/cv.html
+++ b/cv.html
@@ -55,11 +55,49 @@
         </div>
         <div class="experience box">
             <h2>Experience</h2>
-            <p>TO DO</p>
+            <div class="block primary">
+                <p class="period">2021 - now</p>
+                <a href="https://www.easy-lms.com/"><h5>Easy LMS  - Developing</h5></a>
+                <p class="location">Delft</p>
+                <p>Easy LMS is an online learning management system (LMS) designed for companies to train their employees to reach their full potential.</p>
+                <div class="block secondary">
+                    <p class="period">2021 - now, part-time</p>
+                    <h5>Junior Developer</h5>
+                    <p>After my internship I got the opportunity to stay part-time. During this time I got to pick up more projects on my own and start to feel more and more confident in my skills as PHP/JavaScript developer.</p>                
+                </div>
+                <div class="block secondary">
+                    <p class="period">2021, 2 months, full-time</p>
+                    <h5>Summer Internship</h5>
+                    <p>Going into this internship, I had no web-developing experience, which was exactly what drew me to it. I knew I liked programming, but I also was looking to do something totally different and new. This is what I found in the internship. I had a really exciting summer, where I learned tons.</p>
+                </div>
+            </div>
+            <div class="block primary">
+                <p class="period">2014 - 2017</p>
+                <a href="https://www.stroopgoed.nl/"><h5>Dekker Stroopgoed - Baking and selling Stroopwafels</h5></a>
+                <p class="location">Meppel</p>
+                <p>Predominantly running the stroopwafel booth independently. From baking and selling the stroopwafels to setting up and breaking down the booth to training new colleagues.</p>
+            </div>
+            <div class="block primary">
+                <p class="period">2012 - 2014</p>
+                <a href="https://www.easy-lms.com/"><h5>Smit Giethoorn - Washing dishes</h5></a>
+                <p class="location">Giethoorn</p>
+                <p>The tasks I executed ranged from performing small kitchen tasks and washing dishes, to selling ice pops on the water.</p>
+            </div>
         </div>
         <div class="other-experience box">
             <h2>Other Experience</h2>
-            <p>TO DO</p>
+            <div class="block primary">
+                <p class="period">2016 - now</p>
+                <h5>Wedstrijdroeien</h5>
+                <a href="https://proteus-eretes.nl/"><p class="location">D.S.R. Proteus-Eretes</p></a>
+                <p>I have been rowing competitively ever since my first year of studying. Highlights of my rowing carreer are representing the Netherlands in the 8+ at the 2020 European under 23 regatta in Duisburg and winning gold in the 4- at the 2018 European University Games in Coimbra.</p>
+            </div>
+            <div class="block primary">
+                <p class="period">2017 - now</p>
+                <h5>Member of building committees</h5>
+                <a href="https://proteus-eretes.nl/"><p class="location">D.S.R. Proteus-Eretes</p></a>
+                <p>For the past few years I have been engaged in realizing an expansion and renovation of our club house. In this process, I have taken on various roles as secretary, chair and currently I am in charge of acquisition. Our goal is to be able to start building in 2023.</p>
+            </div>        
         </div>
     </body>
 </html>
