--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <ul class="horizontal-list">
                 <li><h1>Ingmar's website</h1></li>
                 <li><a href="./cv.html">CV</a></li>
-                <li>Two</li>
+                <li><a href="./rhr.html">Resting Heart Rate Visualization</a></li>
                 <li>Three</li>
             </ul>
         </header>
