--- a/rhr.html
+++ b/rhr.html
@@ -9,15 +9,8 @@
         <h1>Resting Heart Rate Visualization</h1>
         <h2>June 2022</h2>
         <script src="./scripts/rhr.js"></script>
-
-        <!-- <div id='legend'>
-            <script>
-                for (let i = 39; i < 55 ; i++) {
-                    color = (i< 46) ? `rgba(0,0,255,${((46 - i) / 8)}` : `rgba(255,0,0,${((i - 46) / 8)}`;
-                    document.write(`<div style="background-color: ${color}">${i}</div>`);
-                }
-            </script>
-        </div> -->
-
+        <footer>
+            <a href="./index.html">Ingmar's website</a>
+        </footer>
     </body>
 </html>
