playing with buttons

--- a/rhr.html
+++ b/rhr.html
@@ -7,9 +7,9 @@
     </head>
     <body>
         <h1>Resting Heart Rate Visualization</h1>
-        <button id="previous">Previous Month</button>
+        <button id="previous" type="button">Previous Month</button>
         <h2>June 2022</h2>
-        <button id="next">Next Month</button>
+        <button id="next" type="button">Next Month</button>
         <script src="./scripts/rhr.js"></script>
         <footer>
             <a href="./index.html">Ingmar's website</a>
