--- a/cv.html
+++ b/cv.html
@@ -10,30 +10,39 @@
                 <img src="images/Ingmar_EasyLMS.png" alt="Company headshot of Ingmar">
                 <figcaption><h1>Ingmar Visser</h1></figcaption>
             </figure>              
-            <p id="summary">I am a 24 years old Nanobiology student, developer and competitive rower that enjoys writing code (in particular creating data visualizations, modelling biological processes and developing websites) and practicing endurance sports. In general, I like to learn new things and improve myself.</p>
+            <p id="summary">
+                I am a 25-year-old Nanobiology student who finds great joy in coding, specifically in tasks such as analyzing extensive datasets, modeling biological processes, creating data visualizations, and web development. In addition to my technical proficiency, I have a strong passion for coaching rowers and engaging in a range of endurance sports, including rowing, cycling, running, and skating. I'm genuinely thrilled when I have the chance to learn something new and enhancing my skills in these areas.</p>
             <a href="mailto:ingmarvisser13@gmail.com">Send Email</a>
             <h3>Skills</h3>
             <h4>Languages</h4>
-            <p>Dutch: 5/5 (native)</p>
-            <p>English 4/5</p>
-            <p>German 2/5</p>
+            <p>Dutch: native</p>
+            <p>English: fluent</p>
+            <p>German: basic</p>
             <h4>Programming Languages</h4>
-            <p>Python 4/5</p>
-            <p>PHP 4/5</p>
-            <p>JavaScript 3/5</p>
-            <p>MatLab 3/5</p>
-            <p>R 2/5</p>
+            <p>Python: good</p>
+            <p>PHP: good</p>
+            <p>JavaScript (TypeScript): well</p>
+            <p>MatLab: well</p>
+            <p>R: basic</p>
         </div>
         <div class="education box">
             <h2>Education</h2>
             <div class="block primary">
-                <p class="period">2020 - now</p>
+                <p class="period">September 2020 - now</p>
                 <h5>Nanobiology, Master of Science</h5>
                 <p class="location">Faculty of Applied Sciences (TU Delft) & Erasmus MC (Erasmus Universiteit Rotterdam)</p>
-                <p>In the Master, the knowledge gathered in the Bachelor is applied and deepened, to gain a deeper understanding about life at the moleculair level. This, by combining Physics, Molecular Biology, Mathematics and (computer-)models.</p>
+                <p>In the Master, the knowledge gathered in the Bachelor is applied and deepened, to gain a deeper understanding about life at the moleculair level. This, by combining Physics, Molecular Biology, Mathematics and (computer-)modelling.</p>
+                <div class="block secondary">
+                    <p class="period">November 2022 - August 2023</p>
+                    <h5>Master End Project, 8.0</h5>
+                    <a href="https://www.tudelft.nl/tnw/over-faculteit/afdelingen/bionanoscience/research/research-labs/liedewij-laan-lab"><p class="location">Liedewij Laan Lab, Bionanoscience Department</br>
+                         Faculty of Applied Sciences (TU Delft)
+                    </p></a>
+                    <p>During my Master thesis, I applied data science techniques in order to improve the analysis of Yeast (S. cerevisiae) fitness data (SATAY). This has applications in studying the evolution of biological mechanisms, like cell-division.</p>                
+                </div>
             </div>
             <div class="block primary">
-                <p class="period">2016 - 2020</p>
+                <p class="period">September 2016 - August 2020</p>
                 <h5>Nanobiology, Bachelor of Science</h5>
                 <p class="location">Faculty of Applied Sciences (TU Delft) & Erasmus MC (Erasmus Universiteit Rotterdam)</p>
                 <p>The Bachelor lays a foundation in Physics, Molecular Biology and Mathematics, in order to be able to quantify and model the complexity of living systems.</p>
@@ -56,17 +65,17 @@
         <div class="experience box">
             <h2>Experience</h2>
             <div class="block primary">
-                <p class="period">2021 - now</p>
+                <p class="period">July 2021 - December 2022</p>
                 <a href="https://www.easy-lms.com/"><h5>Easy LMS  - Developing</h5></a>
                 <p class="location">Delft</p>
                 <p>Easy LMS is an online learning management system (LMS) designed for companies to train their employees to reach their full potential.</p>
                 <div class="block secondary">
-                    <p class="period">2021 - now, part-time</p>
+                    <p class="period">September 2021 - December 2022, part-time</p>
                     <h5>Junior Developer</h5>
-                    <p>After my internship I got the opportunity to stay part-time. During this time I got to pick up more projects on my own and start to feel more and more confident in my skills as PHP/JavaScript developer.</p>                
+                    <p>After my internship I got the opportunity to stay part-time. During this time I got to pick up more projects on my own and start to feel more and more confident in my skills as PHP/JavaScript (web-)developer.</p>                
                 </div>
                 <div class="block secondary">
-                    <p class="period">2021, 2 months, full-time</p>
+                    <p class="period">July 2021, September 2021, full-time</p>
                     <h5>Summer Internship</h5>
                     <p>Going into this internship, I had no web-developing experience, which was exactly what drew me to it. I knew I liked programming, but I also was looking to do something totally different and new. This is what I found in the internship. I had a really exciting summer, where I learned tons.</p>
                 </div>
@@ -87,17 +96,30 @@
         <div class="other-experience box">
             <h2>Other Experience</h2>
             <div class="block primary">
-                <p class="period">2016 - now</p>
-                <h5>Wedstrijdroeien</h5>
+                <p class="period">2022 - now</p>
+                <h5>Rowing coach</h5>
+                <a href="https://proteus-eretes.nl/"><p class="location">D.S.R. Proteus-Eretes</p></a>
+                <p>After I stopped rowing myself, I started coaching. In the 2022-2023 season I helped coach a leightweight single scull, whom got to partake in the World Univeristy Games in Chengdu, China. This year, I am appointed co-head coach of the second and third years women, with whom we will be competing on a national level.</p>
+            </div>
+            <div class="block primary">
+                <p class="period">2023 - now</p>
+                <h5>Member of advisory body for competitive rowing (Presidium)</h5>
+                <a href="https://proteus-eretes.nl/"><p class="location">D.S.R. Proteus-Eretes</p></a>
+                <p>As presidium, we support the board in facilitating, supporting and structuring competitive rowing at Proteus-Eretes. We strive to create a safe top-level sports environment within which performance can be achieved by every rower.</p>
+            </div>        
+            <div class="block primary">
+                <p class="period">2016 - 2022</p>
+                <h5>Wedstrijdroeien (Competitive Rowing)</h5>
                 <a href="https://proteus-eretes.nl/"><p class="location">D.S.R. Proteus-Eretes</p></a>
                 <p>I have been rowing competitively ever since my first year of studying. Highlights of my rowing carreer are representing the Netherlands in the 8+ at the 2020 European under 23 regatta in Duisburg and winning gold in the 4- at the 2018 European University Games in Coimbra.</p>
             </div>
             <div class="block primary">
                 <p class="period">2017 - now</p>
-                <h5>Member of building committees</h5>
+                <h5>Member of various building committees</h5>
                 <a href="https://proteus-eretes.nl/"><p class="location">D.S.R. Proteus-Eretes</p></a>
                 <p>For the past few years I have been engaged in realizing an expansion and renovation of our club house. In this process, I have taken on various roles as secretary, chair and currently I am in charge of acquisition. Our goal is to be able to start building in 2023.</p>
-            </div>        
+            </div>  
+        </div>
         </div>
     </body>
 </html>
