Change text wedstrijdroeien

--- a/cv.html
+++ b/cv.html
@@ -109,9 +109,9 @@
             </div>        
             <div class="block primary">
                 <p class="period">2016 - 2022</p>
-                <h5>Wedstrijdroeien (Competitive Rowing)</h5>
+                <h5>Competitive rowing</h5>
                 <a href="https://proteus-eretes.nl/"><p class="location">D.S.R. Proteus-Eretes</p></a>
-                <p>I have been rowing competitively ever since my first year of studying. Highlights of my rowing carreer are representing the Netherlands in the 8+ at the 2020 European under 23 regatta in Duisburg and winning gold in the 4- at the 2018 European University Games in Coimbra.</p>
+                <p>I began my competitive rowing journey while studying Nanobiology in Delft. I consistently competed at the national and international levels, with highlights including representing the Netherlands in the 8+ at the 2020 European Under 23 Regatta in Duisburg and winning gold in the 4- at the 2018 European University Games in Coimbra.</p>
             </div>
             <div class="block primary">
                 <p class="period">2017 - now</p>
